[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dedoc"
authors = [
    {name = "Dedoc team", email = "dedoc@ispras.ru"}
]
maintainers = [
    {name = "Oksana Belyaeva", email = "belyaeva@ispras.ru"},
    {name = "Andrew Perminov", email = "perminov@ispras.ru"},
    {name = "Anastasiya Bogatenkova", email = "bogatenkova.anastasiya@mail.ru"}
]
classifiers=[
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3 :: Only",
]

description = "Extract content and logical tree structure from textual documents"
keywords = ["document analysis", "logical structure extraction", "OCR", "deep learning", "computer vision"]
readme="README.md"
license = {file = "LICENSE.txt"}
dynamic = ["dependencies", "version"]
requires-python = ">=3.6"

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["dedoc*"]
exclude = ["dedoc.scripts*"]

[project.optional-dependencies]
torch = ["torch~=1.11.0", "torchvision~=0.12.0"]
docs = [
    "docutils==0.18.1",
    "Sphinx==6.2.1",
    "sphinx_rtd_theme==1.2.0",  # for using sphinx_rtd_theme
    "linuxdoc==20230506",  # for using flat-table
    "tabula-py==2.8.1",  # for adding new doc type tutorial
]
lint = [
    "flake8==5.0.4",
    "flake8-absolute-import==1.0.0.1",
    "flake8-annotations==2.9.1",
    "flake8-bugbear==23.3.12",
    "flake8-builtins==2.1.0",
    "flake8-import-order==0.18.2",
    "flake8-print==5.0.0",
    "flake8-quotes==3.3.2",
    "flake8-use-fstring==1.4",
    "pycodestyle==2.9.0",
    "pep8-naming==0.13.3"
]

[project.scripts]
dedoc = "dedoc.main:main"

[project.urls]
homepage = "https://github.com/ispras/dedoc"
repository = "https://github.com/ispras/dedoc.git"
documentation = "https://dedoc.readthedocs.io"
changelog = "https://dedoc.readthedocs.io/en/latest/changelog.html"
